force-app/main/default/objects/Product_Cost__c/Product_Cost__c.object-meta.xml
<CustomObject>
<enableFeeds>false</enableFeeds>
    <label>Product Cost</label>
    <nameField>
        <label>Product Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>