force-app/main/default/objects/Product_Cost__c/fields/Cost_BRL__c.field-meta.xml
<CustomField>
    <fullName>Cost_BRL__c</fullName>
    <label>Cost - BRL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>