force-app/main/default/objects/Product_Cost__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error Message for lookup</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>