force-app/main/default/objects/Product_Cost__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products Cost (Parent Product)</relationshipLabel>
    <relationshipName>Products_Cost1</relationshipName>
    <type>Lookup</type>
</CustomField>