force-app/main/default/objects/Product_Cost__c/fields/Unavailable__c.field-meta.xml
<CustomField>
    <fullName>Unavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unavailable</label>
    <type>Checkbox</type>
</CustomField>