force-app/main/default/objects/Product_Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>Product__c</columns>
    <columns>Voltage_Range__c</columns>
    <columns>Type__c</columns>
    <columns>Unavailable__c</columns>
    <columns>Cost_BRL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>