force-app/main/default/objects/Product_Cost__c/listViews/Generic.listView-meta.xml
<ListView>
    <fullName>Generic</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Parent_Product_Formula__c</columns>
    <columns>Voltage_Range__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Generic</value>
    </filters>
    <label>Generic</label>
</ListView>